WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
285714
REGRESSION (
287436@main
): Gradients don't show in PDF output
https://bugs.webkit.org/show_bug.cgi?id=285714
Summary
REGRESSION (287436@main): Gradients don't show in PDF output
Simon Fraser (smfr)
Reported
2025-01-09 16:56:04 PST
After
287436@main
, printing a page with gradients sometimes does not show the gradients (even when choosing to print backgrounds).
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-01-09 16:56:43 PST
<
rdar://problem/142650768
>
Simon Fraser (smfr)
Comment 2
2025-01-09 17:01:30 PST
Pull request:
https://github.com/WebKit/WebKit/pull/38818
EWS
Comment 3
2025-01-09 23:27:23 PST
Committed
288683@main
(e587e812d90c): <
https://commits.webkit.org/288683@main
> Reviewed commits have been landed. Closing PR #38818 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug